# game-of-life

./: .gitignore  main.cpp  mainwindow.cpp
The-game-of-life/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
The-game-of-life/local/: mainwindow_local.cpp  mainwindow_local.h
The-game-of-life/local/model/: model.cpp
The-game-of-life/local/view/: clickableRect.cpp  tableWidget.cpp
The-game-of-life/model/: table.h
The-game-of-life/online/: mainwindow_online.cpp  mainwindow_online.h
The-game-of-life/online/network/: client.cpp  client.h
The-game-of-life/online/view/: clickableRect.h  tableWidget.cpp  tableWidget.h
The-game-of-life/view/: tableWidget.cpp
client-test/: CMakeLists.txt  client.cpp  client.h  main.cpp
client-test/model/: requestType.h
model/: model.cpp  model.h
server-test/: CMakeLists.txt  main.cpp  server.cpp  server.h
server-test/model/: model.cpp  model.h  table.h
view/: clickableRect.h  tableWidget.h
